parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    T_COMMENT
    T_DOC_COMMENT
    T_FOR
    T_STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> T_OPEN_TAG stmt_list T_CLOSE_TAG
Rule 2     stmt_list -> stmt_list stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assignment T_SEMICOLON
Rule 5     stmt -> echo_stmt T_SEMICOLON
Rule 6     stmt -> print_stmt T_SEMICOLON
Rule 7     stmt -> if_stmt
Rule 8     stmt -> while_stmt
Rule 9     block -> T_LBRACE stmt_list T_RBRACE
Rule 10    assignment -> T_VARIABLE T_EQUAL expr
Rule 11    assignment -> T_VARIABLE T_PLUS_EQUAL expr
Rule 12    assignment -> T_VARIABLE T_MINUS_EQUAL expr
Rule 13    assignment -> T_VARIABLE T_MUL_EQUAL expr
Rule 14    assignment -> T_VARIABLE T_DIV_EQUAL expr
Rule 15    assignment -> T_VARIABLE T_MOD_EQUAL expr
Rule 16    assignment -> T_VARIABLE T_CONCAT_EQUAL expr
Rule 17    if_stmt -> T_IF T_LPAREN expr T_RPAREN block
Rule 18    if_stmt -> T_IF T_LPAREN expr T_RPAREN block T_ELSE block
Rule 19    while_stmt -> T_WHILE T_LPAREN expr T_RPAREN block
Rule 20    echo_stmt -> T_ECHO expr
Rule 21    print_stmt -> T_PRINT expr
Rule 22    expr -> expr T_PLUS expr
Rule 23    expr -> expr T_MINUS expr
Rule 24    expr -> expr T_MULT expr
Rule 25    expr -> expr T_DIV expr
Rule 26    expr -> expr T_MOD expr
Rule 27    expr -> expr T_CONCAT expr
Rule 28    expr -> expr T_IS_NOT_EQUAL expr
Rule 29    expr -> expr T_IS_GREATER_OR_EQUAL expr
Rule 30    expr -> expr T_IS_SMALLER_OR_EQUAL expr
Rule 31    expr -> T_LPAREN expr T_RPAREN
Rule 32    expr -> T_LNUMBER
Rule 33    expr -> T_DNUMBER
Rule 34    expr -> T_CONSTANT_ENCAPSED_STRING
Rule 35    expr -> T_VARIABLE

Terminals, with rules where they appear

T_CLOSE_TAG          : 1
T_COMMENT            : 
T_CONCAT             : 27
T_CONCAT_EQUAL       : 16
T_CONSTANT_ENCAPSED_STRING : 34
T_DIV                : 25
T_DIV_EQUAL          : 14
T_DNUMBER            : 33
T_DOC_COMMENT        : 
T_ECHO               : 20
T_ELSE               : 18
T_EQUAL              : 10
T_FOR                : 
T_IF                 : 17 18
T_IS_GREATER_OR_EQUAL : 29
T_IS_NOT_EQUAL       : 28
T_IS_SMALLER_OR_EQUAL : 30
T_LBRACE             : 9
T_LNUMBER            : 32
T_LPAREN             : 17 18 19 31
T_MINUS              : 23
T_MINUS_EQUAL        : 12
T_MOD                : 26
T_MOD_EQUAL          : 15
T_MULT               : 24
T_MUL_EQUAL          : 13
T_OPEN_TAG           : 1
T_PLUS               : 22
T_PLUS_EQUAL         : 11
T_PRINT              : 21
T_RBRACE             : 9
T_RPAREN             : 17 18 19 31
T_SEMICOLON          : 4 5 6
T_STRING             : 
T_VARIABLE           : 10 11 12 13 14 15 16 35
T_WHILE              : 19
error                : 

Nonterminals, with rules where they appear

assignment           : 4
block                : 17 18 18 19
echo_stmt            : 5
expr                 : 10 11 12 13 14 15 16 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31
if_stmt              : 7
print_stmt           : 6
program              : 0
stmt                 : 2 3
stmt_list            : 1 2 9
while_stmt           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . T_OPEN_TAG stmt_list T_CLOSE_TAG

    T_OPEN_TAG      shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> T_OPEN_TAG . stmt_list T_CLOSE_TAG
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment T_SEMICOLON
    (5) stmt -> . echo_stmt T_SEMICOLON
    (6) stmt -> . print_stmt T_SEMICOLON
    (7) stmt -> . if_stmt
    (8) stmt -> . while_stmt
    (10) assignment -> . T_VARIABLE T_EQUAL expr
    (11) assignment -> . T_VARIABLE T_PLUS_EQUAL expr
    (12) assignment -> . T_VARIABLE T_MINUS_EQUAL expr
    (13) assignment -> . T_VARIABLE T_MUL_EQUAL expr
    (14) assignment -> . T_VARIABLE T_DIV_EQUAL expr
    (15) assignment -> . T_VARIABLE T_MOD_EQUAL expr
    (16) assignment -> . T_VARIABLE T_CONCAT_EQUAL expr
    (20) echo_stmt -> . T_ECHO expr
    (21) print_stmt -> . T_PRINT expr
    (17) if_stmt -> . T_IF T_LPAREN expr T_RPAREN block
    (18) if_stmt -> . T_IF T_LPAREN expr T_RPAREN block T_ELSE block
    (19) while_stmt -> . T_WHILE T_LPAREN expr T_RPAREN block

    T_VARIABLE      shift and go to state 10
    T_ECHO          shift and go to state 11
    T_PRINT         shift and go to state 12
    T_IF            shift and go to state 13
    T_WHILE         shift and go to state 14

    stmt_list                      shift and go to state 3
    stmt                           shift and go to state 4
    assignment                     shift and go to state 5
    echo_stmt                      shift and go to state 6
    print_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9

state 3

    (1) program -> T_OPEN_TAG stmt_list . T_CLOSE_TAG
    (2) stmt_list -> stmt_list . stmt
    (4) stmt -> . assignment T_SEMICOLON
    (5) stmt -> . echo_stmt T_SEMICOLON
    (6) stmt -> . print_stmt T_SEMICOLON
    (7) stmt -> . if_stmt
    (8) stmt -> . while_stmt
    (10) assignment -> . T_VARIABLE T_EQUAL expr
    (11) assignment -> . T_VARIABLE T_PLUS_EQUAL expr
    (12) assignment -> . T_VARIABLE T_MINUS_EQUAL expr
    (13) assignment -> . T_VARIABLE T_MUL_EQUAL expr
    (14) assignment -> . T_VARIABLE T_DIV_EQUAL expr
    (15) assignment -> . T_VARIABLE T_MOD_EQUAL expr
    (16) assignment -> . T_VARIABLE T_CONCAT_EQUAL expr
    (20) echo_stmt -> . T_ECHO expr
    (21) print_stmt -> . T_PRINT expr
    (17) if_stmt -> . T_IF T_LPAREN expr T_RPAREN block
    (18) if_stmt -> . T_IF T_LPAREN expr T_RPAREN block T_ELSE block
    (19) while_stmt -> . T_WHILE T_LPAREN expr T_RPAREN block

    T_CLOSE_TAG     shift and go to state 15
    T_VARIABLE      shift and go to state 10
    T_ECHO          shift and go to state 11
    T_PRINT         shift and go to state 12
    T_IF            shift and go to state 13
    T_WHILE         shift and go to state 14

    stmt                           shift and go to state 16
    assignment                     shift and go to state 5
    echo_stmt                      shift and go to state 6
    print_stmt                     shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9

state 4

    (3) stmt_list -> stmt .

    T_CLOSE_TAG     reduce using rule 3 (stmt_list -> stmt .)
    T_VARIABLE      reduce using rule 3 (stmt_list -> stmt .)
    T_ECHO          reduce using rule 3 (stmt_list -> stmt .)
    T_PRINT         reduce using rule 3 (stmt_list -> stmt .)
    T_IF            reduce using rule 3 (stmt_list -> stmt .)
    T_WHILE         reduce using rule 3 (stmt_list -> stmt .)
    T_RBRACE        reduce using rule 3 (stmt_list -> stmt .)


state 5

    (4) stmt -> assignment . T_SEMICOLON

    T_SEMICOLON     shift and go to state 17


state 6

    (5) stmt -> echo_stmt . T_SEMICOLON

    T_SEMICOLON     shift and go to state 18


state 7

    (6) stmt -> print_stmt . T_SEMICOLON

    T_SEMICOLON     shift and go to state 19


state 8

    (7) stmt -> if_stmt .

    T_CLOSE_TAG     reduce using rule 7 (stmt -> if_stmt .)
    T_VARIABLE      reduce using rule 7 (stmt -> if_stmt .)
    T_ECHO          reduce using rule 7 (stmt -> if_stmt .)
    T_PRINT         reduce using rule 7 (stmt -> if_stmt .)
    T_IF            reduce using rule 7 (stmt -> if_stmt .)
    T_WHILE         reduce using rule 7 (stmt -> if_stmt .)
    T_RBRACE        reduce using rule 7 (stmt -> if_stmt .)


state 9

    (8) stmt -> while_stmt .

    T_CLOSE_TAG     reduce using rule 8 (stmt -> while_stmt .)
    T_VARIABLE      reduce using rule 8 (stmt -> while_stmt .)
    T_ECHO          reduce using rule 8 (stmt -> while_stmt .)
    T_PRINT         reduce using rule 8 (stmt -> while_stmt .)
    T_IF            reduce using rule 8 (stmt -> while_stmt .)
    T_WHILE         reduce using rule 8 (stmt -> while_stmt .)
    T_RBRACE        reduce using rule 8 (stmt -> while_stmt .)


state 10

    (10) assignment -> T_VARIABLE . T_EQUAL expr
    (11) assignment -> T_VARIABLE . T_PLUS_EQUAL expr
    (12) assignment -> T_VARIABLE . T_MINUS_EQUAL expr
    (13) assignment -> T_VARIABLE . T_MUL_EQUAL expr
    (14) assignment -> T_VARIABLE . T_DIV_EQUAL expr
    (15) assignment -> T_VARIABLE . T_MOD_EQUAL expr
    (16) assignment -> T_VARIABLE . T_CONCAT_EQUAL expr

    T_EQUAL         shift and go to state 20
    T_PLUS_EQUAL    shift and go to state 21
    T_MINUS_EQUAL   shift and go to state 22
    T_MUL_EQUAL     shift and go to state 23
    T_DIV_EQUAL     shift and go to state 24
    T_MOD_EQUAL     shift and go to state 25
    T_CONCAT_EQUAL  shift and go to state 26


state 11

    (20) echo_stmt -> T_ECHO . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 27

state 12

    (21) print_stmt -> T_PRINT . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 33

state 13

    (17) if_stmt -> T_IF . T_LPAREN expr T_RPAREN block
    (18) if_stmt -> T_IF . T_LPAREN expr T_RPAREN block T_ELSE block

    T_LPAREN        shift and go to state 34


state 14

    (19) while_stmt -> T_WHILE . T_LPAREN expr T_RPAREN block

    T_LPAREN        shift and go to state 35


state 15

    (1) program -> T_OPEN_TAG stmt_list T_CLOSE_TAG .

    $end            reduce using rule 1 (program -> T_OPEN_TAG stmt_list T_CLOSE_TAG .)


state 16

    (2) stmt_list -> stmt_list stmt .

    T_CLOSE_TAG     reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_VARIABLE      reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_ECHO          reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_PRINT         reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_IF            reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_WHILE         reduce using rule 2 (stmt_list -> stmt_list stmt .)
    T_RBRACE        reduce using rule 2 (stmt_list -> stmt_list stmt .)


state 17

    (4) stmt -> assignment T_SEMICOLON .

    T_CLOSE_TAG     reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_VARIABLE      reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_ECHO          reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_PRINT         reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_IF            reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_WHILE         reduce using rule 4 (stmt -> assignment T_SEMICOLON .)
    T_RBRACE        reduce using rule 4 (stmt -> assignment T_SEMICOLON .)


state 18

    (5) stmt -> echo_stmt T_SEMICOLON .

    T_CLOSE_TAG     reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_VARIABLE      reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_ECHO          reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_PRINT         reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_IF            reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_WHILE         reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)
    T_RBRACE        reduce using rule 5 (stmt -> echo_stmt T_SEMICOLON .)


state 19

    (6) stmt -> print_stmt T_SEMICOLON .

    T_CLOSE_TAG     reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_VARIABLE      reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_ECHO          reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_PRINT         reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_IF            reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_WHILE         reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)
    T_RBRACE        reduce using rule 6 (stmt -> print_stmt T_SEMICOLON .)


state 20

    (10) assignment -> T_VARIABLE T_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 36

state 21

    (11) assignment -> T_VARIABLE T_PLUS_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 37

state 22

    (12) assignment -> T_VARIABLE T_MINUS_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 38

state 23

    (13) assignment -> T_VARIABLE T_MUL_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 39

state 24

    (14) assignment -> T_VARIABLE T_DIV_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 40

state 25

    (15) assignment -> T_VARIABLE T_MOD_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 41

state 26

    (16) assignment -> T_VARIABLE T_CONCAT_EQUAL . expr
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 42

state 27

    (20) echo_stmt -> T_ECHO expr .
    (22) expr -> expr . T_PLUS expr
    (23) expr -> expr . T_MINUS expr
    (24) expr -> expr . T_MULT expr
    (25) expr -> expr . T_DIV expr
    (26) expr -> expr . T_MOD expr
    (27) expr -> expr . T_CONCAT expr
    (28) expr -> expr . T_IS_NOT_EQUAL expr
    (29) expr -> expr . T_IS_GREATER_OR_EQUAL expr
    (30) expr -> expr . T_IS_SMALLER_OR_EQUAL expr

    T_SEMICOLON     reduce using rule 20 (echo_stmt -> T_ECHO expr .)
    T_PLUS          shift and go to state 43
    T_MINUS         shift and go to state 44
    T_MULT          shift and go to state 45
    T_DIV           shift and go to state 46
    T_MOD           shift and go to state 47
    T_CONCAT        shift and go to state 48
    T_IS_NOT_EQUAL  shift and go to state 49
    T_IS_GREATER_OR_EQUAL shift and go to state 50
    T_IS_SMALLER_OR_EQUAL shift and go to state 51


state 28

    (31) expr -> T_LPAREN . expr T_RPAREN
    (22) expr -> . expr T_PLUS expr
    (23) expr -> . expr T_MINUS expr
    (24) expr -> . expr T_MULT expr
    (25) expr -> . expr T_DIV expr
    (26) expr -> . expr T_MOD expr
    (27) expr -> . expr T_CONCAT expr
    (28) expr -> . expr T_IS_NOT_EQUAL expr
    (29) expr -> . expr T_IS_GREATER_OR_EQUAL expr
    (30) expr -> . expr T_IS_SMALLER_OR_EQUAL expr
    (31) expr -> . T_LPAREN expr T_RPAREN
    (32) expr -> . T_LNUMBER
    (33) expr -> . T_DNUMBER
    (34) expr -> . T_CONSTANT_ENCAPSED_STRING
    (35) expr -> . T_VARIABLE

    T_LPAREN        shift and go to state 28
    T_LNUMBER       shift and go to state 29
    T_DNUMBER       shift and go to state 30
    T_CONSTANT_ENCAPSED_STRING shift and go to state 31
    T_VARIABLE      shift and go to state 32

    expr                           shift and go to state 52

state 29

    (32) expr -> T_LNUMBER .

    T_PLUS          reduce using rule 32 (expr -> T_LNUMBER .)
    T_MINUS         reduce using rule 32 (expr -> T_LNUMBER .)
    T_MULT          reduce using rule 32 (expr -> T_LNUMBER .)
    T_DIV           reduce using rule 32 (expr -> T_LNUMBER .)
    T_MOD           reduce using rule 32 (expr -> T_LNUMBER .)
    T_CONCAT        reduce using rule 32 (expr -> T_LNUMBER .)
    T_IS_NOT_EQUAL  reduce using rule 32 (expr -> T_LNUMBER .)
    T_IS_GREATER_OR_EQUAL reduce using rule 32 (expr -> T_LNUMBER .)
    T_IS_SMALLER_OR_EQUAL reduce using rule 32 (expr -> T_LNUMBER .)
    T_SEMICOLON     reduce using rule 32 (expr -> T_LNUMBER .)
    T_RPAREN        reduce using rule 32 (expr -> T_LNUMBER .)


state 30

    (33) expr -> T_DNUMBER .

    T_PLUS          reduce using rule 33 (expr -> T_DNUMBER .)
    T_MINUS         reduce using rule 33 (expr -> T_DNUMBER .)
    T_MULT          reduce using rule 33 (expr -> T_DNUMBER .)
    T_DIV           reduce using rule 33 (expr -> T_DNUMBER .)
    T_MOD           reduce using rule 33 (expr -> T_DNUMBER .)
    T_CONCAT        reduce using rule 33 (expr -> T_DNUMBER .)
    T_IS_NOT_EQUAL  reduce using rule 33 (expr -> T_DNUMBER .)
    T_IS_GREATER_OR_EQUAL reduce using rule 33 (expr -> T_DNUMBER .)
    T_IS_SMALLER_OR_EQUAL reduce using rule 33 (expr -> T_DNUMBER .)
    T_SEMICOLON     reduce using rule 33 (expr -> T_DNUMBER .)
    T_RPAREN        reduce using rule 33 (expr -> T_DNUMBER .)


state 31

    (34) expr -> T_CONSTANT_ENCAPSED_STRING .

    T_PLUS          reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_MINUS         reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_MULT          reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_DIV           reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_MOD           reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_CONCAT        reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_IS_NOT_EQUAL  reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_IS_GREATER_OR_EQUAL reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_IS_SMALLER_OR_EQUAL reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_SEMICOLON     reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)
    T_RPAREN        reduce using rule 34 (expr -> T_CONSTANT_ENCAPSED_STRING .)


state 32

    (35) expr -> T_VARIABLE .
